# toji

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  tox.ini
.streamlit/: config.toml
tests/: test_util.py
tohji/: app.py
toji/: app.py  config.py  record.py  util.py  webrtc.py
toji/ui/: main.py  sidebar.py
